--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.21.1",
+    "react-router-dom": "^5.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
